--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'luna-object-viewer/luna-object-viewer.css';
+@import 'luna-data-grid/luna-data-grid.css';
+@import 'luna-dom-viewer/luna-dom-viewer.css';
+@import 'luna-console/luna-console.css';
